--- a/games/fish/index.html
+++ b/games/fish/index.html
@@ -19,9 +19,14 @@
       <div id="progress-text">Downloading Game Assets...</div>
     </div>
     <canvas id='game'></canvas>
-    <script src="pixi.js"></script>
+    <script>
+      var server_address = 'http://terraria.hotagames.com:3000';
+    </script>
+    <script src="uuid.js"></script>
+    <script src="pixi.min.js"></script>
     <script src="screenfull.min.js"></script>
-    <script src="howler.js"></script>
+    <script src="howler.min.js"></script>
+    <script src="socket.io.js"></script>
     <script src="fish.js"></script>
   </body>
 </html>
